--- a/society-frontend/src/App.css
+++ b/society-frontend/src/App.css
@@ -224,12 +224,12 @@ h5{
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(255, 51, 0);
+    background-color: rgb(0, 255, 149);
     display: flex;
     justify-content: space-around;
 }
 .nav-links2 a{
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 .nav-links2 a:hover{
     /* background-color: rgb(1, 204, 119); */
@@ -875,7 +875,6 @@ border-radius: 1rem;
     border-top: 16px solid #34db8d;
     width: 90px;
     height: 90px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
   }
   
@@ -883,17 +882,19 @@ border-radius: 1rem;
       font-size: 5rem;
       color: greenyellow;
   }
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
+
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
 
+  .confirm_cancel{
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(58, 57, 57,.6);
+  }
   .members-heading{
     width: 90%;
     padding: 1rem;
