--- a/society-frontend/src/App.css
+++ b/society-frontend/src/App.css
@@ -132,11 +132,11 @@ a{
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(70, 218, 127);
+    background-color: rgb(71,132,255);
 }
 a{
     text-decoration: none;
-    color: rgb(17, 33, 121);
+    color: rgb(253, 253, 255);
 }
 .getStart{
     display: flex;
@@ -187,7 +187,9 @@ a{
 }
 .nav-links a:hover{
     /* background-color: rgb(1, 204, 119); */
-    color: rgb(86, 111, 255);
+    color: rgb(243, 243, 243);
+    font-size: xx-large;
+    transition: all .3s;
 }
 h5{
     display: inline;
@@ -234,7 +236,7 @@ h5{
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(70, 218, 127);
+    background-color:rgb(71,132,255);
     display: flex;
     justify-content: space-around;
 }
@@ -243,7 +245,7 @@ h5{
 }
 .nav-links2 a:hover{
     /* background-color: rgb(1, 204, 119); */
-    color: rgb(52, 77, 223);
+    color: rgb(235, 232, 232);
 }
 
 @media screen and (min-width:1028px){
@@ -346,12 +348,15 @@ h5{
 
 /* service provided */
 .service_container{
-
+    height: 100%;
+background: rgb(218, 218, 219);
 text-align: center;
 font-size: 1.3rem;
 }
 .title{
-    padding: 5rem;
+    margin: auto;
+    text-decoration: underline;
+    padding: 5rem 0 0 3rem;
 }
 .service_logo{
     display: inline-block;
@@ -361,11 +366,24 @@ font-size: 1.3rem;
     width: 90vw;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
-    grid-row-gap: 2rem;
-    grid-column-gap: 50px;
-    margin: auto;
+    /* grid-row-gap: 2rem;
+    grid-column-gap: 50px; */
+    margin:auto;
+    
 }
-
+.service_provider div{
+    /* border: 1px solid red; */
+    background: white;
+    padding: 1rem;
+    box-shadow: 10px 10px 5px gray;
+    border-radius: 1rem;
+    transition: all .3s;
+    margin: 2rem;
+}
+.service_provider div:hover{
+    background-color:#4784ff;
+    color: white;
+}
 
 .service_provider h6{
     font-size: 1.5rem;
@@ -387,6 +405,7 @@ font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: rgb(233, 233, 233);
     /* border: 1px solid black; */
 }
 .getStart-form{
@@ -426,7 +445,7 @@ input{
     margin-top: .3rem;
     width: 90%;
     height: 2.5rem;
-    outline-color: mediumspringgreen;
+    outline-color: rgb(74, 85, 228);
     font-size: 1.5rem;
 }
 textarea{
@@ -444,7 +463,10 @@ textarea{
     border: 1px solid black;
     display: flex;
     align-items: center;
-    flex-direction: column
+    flex-direction: column;
+    border-radius: .5rem;
+    box-shadow: 0px 0px 10px black;
+    background: rgb(255, 255, 255);
 }
 
 .societyList{
@@ -475,13 +497,15 @@ option{
     background: rgb(180, 190, 190);
     outline: none;
     cursor: pointer;
+    color: white;
+    font-size: x-large;
     border: .1rem solid rgb(251, 255, 253);
 }
 .btn:hover{
     border: 2px solid rgb(160, 157, 157);
 }
 .primary{
-    background-color: rgb(0, 255, 149);
+    background-color: rgb(86, 155, 245);
 
 }
 
@@ -493,6 +517,11 @@ option{
         align-items: center;
         flex-direction: column
     }
+    .service_provider{
+        margin: 0 auto;
+        grid-template-columns: repeat(auto-fit,minmax(auto,1fr));
+    }
+
 }
 
 /* Rules  */
@@ -708,7 +737,7 @@ article{
     height: auto;
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    /* padding: 2rem; */
     justify-content: space-between;
     border-right: 1px solid rgb(175, 170, 170);
 }
@@ -746,7 +775,7 @@ article{
 .updates{
     width: 75%;
 }
-@media screen and (max-width:900px){
+@media screen and (max-width:1028px){
     .updates{
         width: 100%;
     }
@@ -883,7 +912,7 @@ border-radius: 1rem;
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #34db8d;
+    border-top: 16px solid #4151df;
     width: 90px;
     height: 90px;
     animation: spin 2s linear infinite;
@@ -891,7 +920,7 @@ border-radius: 1rem;
   
   .done{
       font-size: 5rem;
-      color: greenyellow;
+      color: rgb(47, 50, 255);
   }
 
   @keyframes spin {
@@ -964,7 +993,7 @@ border-radius: 1rem;
     width: 40%;
     justify-content: space-between;
 }
-  @media screen and (max-width:1000px){
+  @media screen and (max-width:1028px){
       .members-list{
           width: 99%;
           height: auto;
