--- a/society-frontend/src/App.css
+++ b/society-frontend/src/App.css
@@ -27,7 +27,7 @@ a{
 /* Add society */
 .addSociety{
     position: fixed;
-    bottom: 10rem;
+    top: 7rem;
     right: 5rem;
     height: 3rem;
     width: 10rem;
@@ -58,6 +58,9 @@ a{
 .deleteBtn:hover{
     font-size: 4rem;
 }
+.display_none{
+    display: none;
+}
 .add-society{
     display: flex;
     height: 0;
@@ -75,13 +78,15 @@ a{
 .society-list{
     transition: all .5s;
     display: flex;
+    flex-wrap: wrap;
+    height: auto;
     background-color: rgb(221, 216, 216);
+    background: red;
     border-radius: 1rem;
     width: 70%;
     margin: 1rem auto;
     justify-content: space-around;
     padding: .5rem;
-    height: 5rem;
     align-items: center;
 
 }
@@ -99,6 +104,12 @@ a{
     margin: 5rem;
     transition: all .5s;
 
+}
+@media screen and (max-width:1028px){
+
+.society-list h1{
+    display:inline;
+}
 }
 .getDetails{
     display: flex;
@@ -420,6 +431,9 @@ font-size: 1.3rem;
     background-color: rgb(228, 107, 107);
     transition: all .3s;
     margin: 2rem 0;
+}
+.color_black{
+    color: blue;
 }
 .signin label{
     text-transform: capitalize;
@@ -950,7 +964,13 @@ border-radius: 1rem;
 .roleChanger{
     display: none;
     height: 2rem;
+    font-size: xx-large;
+    background: none;
     margin: 1rem;
+    border: none;
+    color: blue;
+    cursor: pointer;
+    outline: none;
 }
 .members-list:hover .roleChanger{
     display: inline;
