--- a/society-frontend/src/App.css
+++ b/society-frontend/src/App.css
@@ -438,6 +438,7 @@ font-size: 1.3rem;
     width: 90%;
     border-radius: .3rem;
     text-align: center;
+    font-size: x-large;
     background-color: rgb(228, 107, 107);
     transition: all .3s;
     margin: 2rem 0;
