--- a/society-frontend/src/App.css
+++ b/society-frontend/src/App.css
@@ -328,7 +328,7 @@ h5{
     color: black;
 
 }
-@media screen and (max-width:786px){
+@media screen and (max-width:1028px){
     .banner div button{
         margin: 1rem;
         height: 5rem;
@@ -365,6 +365,7 @@ h5{
 /* service provided */
 .service_container{
     height: 100%;
+    width: 100%;
 background: rgb(218, 218, 219);
 text-align: center;
 font-size: 1.3rem;
@@ -389,7 +390,7 @@ font-size: 1.3rem;
     grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     /* grid-row-gap: 2rem;
     grid-column-gap: 50px; */
-    margin:auto;
+    margin:auto 1rem;
     
 }
 .service_provider div{
@@ -652,6 +653,8 @@ article{
 .complaint-of{
     background: rgb(243, 243, 243);
     padding: .5rem 2rem;
+    display: flex;
+    justify-content: space-around;
 }
 
 .make-complaint{
@@ -717,10 +720,11 @@ article{
 .edit-btn{
     position: relative;
 }
-.Edit-complaint{
+.edit-complaint{
     position: absolute;
     height: 3rem;
     width: 6rem;
+    top:1rem;
     right: 0;
     border-radius: 1rem;
     color: rgb(255, 255, 255);
